@@ -1,3 +1,8 @@
+2024-10-15 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCopt.c:
+	  Optimize out some casts and assignments earlier, part of RFE #937.
+
 2024-10-14 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCopt.c:
